Enhance Aeron replay recovery workflow